feat: add diet selection for shopping list
